--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -53,70 +53,72 @@ div {
 
 .about--me {
     width: 100%;
-    height: 110px;
+    height: 40px;
     border-bottom: solid 1px #fff;
-    padding: 20px;
+    padding: 40px 20px 20px;
 }
 
-.about--me h2 {
+.about--me h1 {
     margin: 0;
     color: #fff;
+    font-size: 30px;
 }
 
-.about--me p {
-    margin: 0;
-    color: #fff;
+/*======Events=====*/
+.events {
+    margin-top: 50px;
+    width: 100%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 20px;
+    border-bottom: solid 1px #fff;
+    padding-bottom: 30px;
 }
 
-.about--me span {
-    margin: 0;
-    color: #fff;
+.event--item {
+    background-color: #3B3F3F;
+    border-radius: 20px;
+    height: 180px;
+    width: 450px;
+    margin-bottom: 20px;
 }
 
-.box--about {
-    width: 80px;
-    height: 80px;
-    background-color: #fff;
-    margin: auto 0;
-}
-
-.about--info {
-    flex-direction: column;
-    margin-left: 20px;
-    gap: 10px;
+.events button {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
+    padding: 8px 16px;
+    gap: 10px;
+
+    width: 363px;
+    height: 64px;
+
+    background: #4FAFA1;
+    border-radius: 25px;
+    border: none;
+
+    cursor: pointer;
 }
 
-/*=====progressAndHours=====*/
-.progressAndHours {
-    margin-top: 50px;
-    height: 350px;
+/*=====Rank=====*/
+.rank {
     width: 100%;
-    gap: 50px;
-    justify-content: space-between;
+    height: 300px;
+    border-bottom: solid 1px #fff;
+    padding-bottom: 30px;
 }
 
-.progress {
-    background-color: #3B3F3F;
-    border-radius: 20px;
-    width: 45%;
-}
-
-.hours {
-    background-color: #3B3F3F;
-    border-radius: 20px;
-    width: 55%;
-}
-
-/*=====history=====*/
-.history {
-    margin-top: 50px;
-    height: 350px;
+/*=====Progress=====*/
+.progress--main {
     width: 100%;
-    gap: 50px;
-    background-color: #3B3F3F;
-    border-radius: 20px;
+    height: 300px;
+    border-bottom: solid 1px #fff;
+    padding-bottom: 30px;
 }
+
+
+/*=====Футер====*/
 
 .footer {
     margin: 20px;
