--- a/frontend/src/stylesheets/header.css
+++ b/frontend/src/stylesheets/header.css
@@ -1,3 +1,58 @@
+header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-width: 0 0 1px 0;
+  border-style: solid;
+  padding: 30px 0;
+  border-color: #ffffff;
+  background: #2C2C2C;
+  backdrop-filter: blur(0.7);
+  position: fixed;
+  z-index: 1;
+}
+header button {
+  font-size: 24px;
+  cursor: pointer;
+  background: transparent;
+  border-style: none;
+  color: #EBEBEB;
+}
+header a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+header .auth__form {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: #EBEBEB;
+}
+header .auth__form a {
+  color: #EBEBEB;
+  font-size: 14px;
+  font-weight: 600;
+  transition: 0.4s;
+}
+header .auth__form a:hover {
+  text-decoration: underline;
+}
+header .containerH {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+}
+header .containerH h2 {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 15px;
+  color: #EBEBEB;
+}
+
 .AvatarRoot {
   display: inline-flex;
   align-items: center;
