--- a/frontend/src/stylesheets/header.scss
+++ b/frontend/src/stylesheets/header.scss
@@ -1,5 +1,56 @@
 header {
-
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-width: 0 0 1px 0;
+  border-style: solid;
+  padding: 30px 0;
+  border-color: #ffffff;
+  background: #2C2C2C;
+  backdrop-filter: blur(0.7);
+  position: fixed;
+  z-index: 1;
+  button {
+    font-size: 24px;
+    cursor: pointer;
+    background: transparent;
+    border-style: none;
+    color: #EBEBEB;
+  }
+  a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+  }
+  .auth__form{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: #EBEBEB;
+    a {
+      color: #EBEBEB;
+      font-size: 14px;
+      font-weight: 600;
+      transition: 0.4s;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+  .containerH {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    h2 {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      gap: 15px;
+      color: #EBEBEB;
+    }
+  }
 }
 .AvatarRoot {
   display: inline-flex;
