--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -1,25 +1,24 @@
 body {
     margin: 0;
     background-color: #2C2C2C;
+    min-height: 100%;
 }
 
 div {
     display: flex;
 }
 
-.container {
+/*=====Header=====*/
+.main__main{
     flex-direction: column;
-    width: 100%;
-    max-width: 1000px;
     align-items: center;
+    width: 100%;
     margin: 0 auto;
 }
 
-/*=====Header=====*/
-
 .header {
     max-width: 1200px;
-    width: 1100px;
+    width: 95%;
     height: 100px;
     border-bottom: solid #fff;
 }
@@ -49,13 +48,20 @@ div {
     height: 30px;
 }
 
+.container__main {
+    flex-direction: column;
+    width: 90%;
+    max-width: 1000px;
+    align-items: center;
+}
+
 /*=====About=====*/
 
 .about--me {
     width: 100%;
     height: 40px;
     border-bottom: solid 1px #fff;
-    padding: 40px 20px 20px;
+    padding: 40px 0 20px;
 }
 
 .about--me h1 {
@@ -69,8 +75,8 @@ div {
     margin-top: 50px;
     width: 100%;
     justify-content: space-evenly;
-    flex-wrap: wrap;
     gap: 20px;
+    flex-wrap: wrap;
     border-bottom: solid 1px #fff;
     padding-bottom: 30px;
 }
@@ -85,7 +91,6 @@ div {
 
 .events button {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 8px 16px;
@@ -99,6 +104,7 @@ div {
     border: none;
 
     cursor: pointer;
+    margin: 0 50px;
 }
 
 /*=====Rank=====*/
@@ -120,9 +126,9 @@ div {
 
 /*=====Футер====*/
 
-.footer {
+.footer__main {
+    display: flex;
     margin: 20px;
-    height: 150px;
     width: 100%;
     gap: 20px;
     justify-content: center;
@@ -131,11 +137,11 @@ div {
 
 }
 
-.footer img {
+.footer__main img {
     height: 40px;
 }
 
-.footer h1 {
+.footer__main h1 {
     display: flex;
     align-items: center;
     color: #fff;
@@ -148,7 +154,27 @@ div {
 
 }
 
-.footer p {
+.footer__main p {
     color: #fff;
     margin: 0;
+}
+
+
+/*=====Media=====*/
+@media screen and (max-width: 800px) {
+    .header {
+        display: none;
+    }
+
+    .footer__main h1 {
+        font-size: 30px;
+        flex-direction: column;
+        text-align: center;
+        height: fit-content;
+    }
+
+    .footer__main p {
+        text-align: center;
+    }
+
 }
