Ready visual rendering and smth else small

--- a/frontend/src/stylesheets/addButton.css
+++ b/frontend/src/stylesheets/addButton.css
@@ -8,7 +8,7 @@
   border-style: none;
   cursor: pointer;
   color: #4FAFA1;
-  position: fixed;
+  position: absolute;
   top: 80%;
   left: 48%;
   font-size: 90px;
